--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@angular/language-service": "^11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^12.11.1",
+    "@types/node": "^14.11.2",
     "ajv": "^6.1.1",
+    "exceljs": "^4.2.1",
+    "file-saver": "^2.0.5",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -47,7 +49,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~3.2.0",
+    "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.6"
   }
