--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2015",
+    "skipLibCheck": true,
+    "types": ["node"],
+    "paths": {
+      "exceljs": ["node_modules/exceljs/dist/exceljs.min"]
+    },
     "typeRoots": [
       "node_modules/@types"
     ],
