--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "^11.2.14",
     "@angular/core": "^11.2.14",
     "@angular/forms": "^11.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/platform-browser": "^11.2.14",
     "@angular/platform-browser-dynamic": "^11.2.14",
     "@angular/router": "^11.2.14",
@@ -44,6 +45,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^14.11.2",
     "ajv": "^6.1.1",
+    "@angular/material": "~8.2.3",
     "exceljs": "^4.2.1",
     "file-saver": "^2.0.5",
     "codelyzer": "^6.0.0",
